# SnakeAltPromoter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: launch.py  stl_app.py
docs/: Genomesetup.md  Snakealtpromoter.md  workflow_overview.tiff
rules/: Altpromoterflow.Snakefile  Genomesetup.Snakefile  Snakealtpromoter.Snakefile
rules/envs/: dexR.yaml  featurecounts.yaml
rules/unchanged/: Altpromoterflow.Snakefile  Genomesetup.Snakefile  basic.yaml
scripts/: data_download.R  dexseq_counts.R  dexseq_merge.R  dexseq_plots.R  merge_promoter_counts.R  plots.R  plots_total.R  proactiv_plots.R  proactiv_quantify.R  promoter_classify.R  promoter_differential.R  salmon_counts.R  salmon_merge.R  salmon_plots.R  sanity_check.R
scripts/downstream_plots/: Venn_major_minor  scatterplot2.R
scripts/unchanged/: dexseq_counts.R  dexseq_merge.R  proactiv_counts.R  proactiv_merge.R  proactiv_plots.R  salmon_counts.R  salmon_merge.R
snakealtpromoter/: _version.py
snakealtpromoter/docs/: Genomesetup.md  Snakealtpromoter.md
snakealtpromoter/rules/: Genomesetup.Snakefile  Snakealtpromoter.Snakefile
snakealtpromoter/scripts/: merge_promoter_counts.R  plots.R  plots_total.R  proactiv_count_merged.R  proactiv_differential.R  promoter_classify.R  promoter_classify_cage.R  promoter_differential.R  (+1 more)
tests/: test_cli_help.py  test_config_generation.py  test_helpers.py  test_imports.py  test_package_data.py  test_samplesheet.py
ui/: launch.py  stl_app.py
workflows/: Altpromoterflow.py  Genomesetup.py  Snakealtpromoter.py
(+26 files in other folders)
