[build-system]
requires = ["setuptools>=72.1.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "snakeAltPromoter"
version = "1.0.0"
description = "A Snakemake pipeline for alternative promoter analysis"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Yidan Sun", email = "syidan@wustl.edu" },
]
maintainers = [
    { name = "Jared Lalmansingh", email = "jared.lalmansingh@wustl.edu" },
]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "snakemake>=8.28.0",
    "streamlit==1.50.0",
]
requires-python = ">=3.10"


[project.scripts]
Genomesetup = "snakealtpromoter.workflows.Genomesetup:main"
Snakealtpromoter = "snakealtpromoter.workflows.Snakealtpromoter:main"
sap = "snakealtpromoter.cli:main"
sap-ui = "snakealtpromoter.ui.launch:main"


[tool.setuptools]
packages = [
    "snakealtpromoter",
    "snakealtpromoter.ui",
    "snakealtpromoter.workflows",
]


[tool.setuptools.package-data]
workflows = [
  "rules/**",
  "scripts/**"
]

[project.urls]
homepage = "https://github.com/YidanSunResearchLab/SnakeAltPromoter"
repository = "https://github.com/YidanSunResearchLab/SnakeAltPromoter"
issues = "https://github.com/YidanSunResearchLab/SnakeAltPromoter/issues"
